@@ -17,6 +17,7 @@ rules-edit: new action 'app-Fix-Dependencies' to display missing dependencies, w
 rules-edit: new action 'securityProfile-remove-FastAPI'
 rules-edit: new filter (location is.parent.of [DeviceGroup])
 rules-edit: new filter 'app has.missing.dependencies'
+rules-edit: new filter 'action is.drop'
 download-predefined: introduction of new util to download predefined.xml especially for APP-id datebase
 address-edit: new action split-large-address-group
 address-edit: new action AddToGroup
